--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">projekt-zespolowy</string>
+    <string name="title_activity_start">StartActivity</string>
+    <string name="title_activity_history">HistoryActivity</string>
+    <string name="title_activity_nav_bar">NavBarActivity</string>
 </resources>
